updated C flags in makefile

--- a/src/binarysearchtree/makefile
+++ b/src/binarysearchtree/makefile
@@ -1,12 +1,16 @@
 CC=gcc
-CFLAGS=-I.
-DEPS = bst.h
-OBJ= bst.o main.o
+CFLAGS="-I. -O3"
+DEBUG="-I. -gp"
+DEPS = include/bst.h
+OBJ= bst.o bst_driver.o
 
-OUT=../../build
+OUT=build
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-${OUT}/bst: $(OBJ)
+${OUT}/bst_driver: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
+
+${OUT}/bst_driver_debug: $(OBJ)
+	$(CC) -o $@ $^ $(DEBUG)
