--- a/src/binarysearchtree/makefile
+++ b/src/binarysearchtree/makefile
@@ -1,17 +1,29 @@
 CC=gcc
-CFLAGS="-I. -O3"
+CFLAGS="-I. -O3 -march=native"
 DEBUG="-I. -gp"
 DEPS = include/bst.h
 OBJDIR=obj
 OBJ= ${OBJDIR}/bst.o ${OBJDIR}/bst_driver.o
+DEBUGOBJ= ${OBJDIR}/bst_debug.o ${OBJDIR}/bst_driver_debug.o
 
-OUT=build
+OUTDIR=build
 
 ${OBJDIR}/%.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
-${OUT}/bst_driver: $(OBJ)
+${OBJDIR}/%_debug.o: %.c $(DEPS)
+	$(CC) -c -o $@ $< $(DEBUG)
+
+${OUTDIR}/bst_driver: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS)
 
-${OUT}/bst_driver_debug: $(OBJ)
+${OUTDIR}/bst_driver_debug: $(DEBUGOBJ)
 	$(CC) -o $@ $^ $(DEBUG)
+
+.PHONY=setup
+
+setup: 
+	@rm -rf ${OUTDIR}
+	@rm -rf ${OBJDIR}
+	mkdir ${OUTDIR}
+	mkdir ${OBJDIR}
